* Cacti doesn't support custom parameters for Script Queries, so we need a config file for port and password   * Added cacti .xml file

--- a/config.php.example
+++ b/config.php.example
@@ -1,5 +1,11 @@
 <?php
-$hostname = '';
-$port = '';
-$password = '';
+$hostname = isset($hostname) ? $hostname : '';
+
+switch($hostname) {
+	default:
+		$port = '';
+		$password = '';
+
+		return;
+}
 ?>
