--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/database": "4.0.0"
+        "illuminate/database": "4.0.0",
+        "illuminate/cache": "4.0.0"
     },
     "autoload": {
         "classmap": [
-	    "model/"
+	       "model/"
         ]
     },
     "minimum-stability": "dev"
