Defined OpenVpnApi.php as autoloaded

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
     "autoload": {
         "classmap": [
 	       "model/"
+        ],
+        "files": [
+            "OpenVpnApi.php"
         ]
     },
     "minimum-stability": "dev"
