--- a/config.php.example
+++ b/config.php.example
@@ -1,22 +1,18 @@
 <?php
-// OpenVPN Management Interface
-$hostname = isset($hostname) ? $hostname : '';
-switch($hostname) {
-	default:
-		$port = '';
-		$password = '';
-
-		break;
-}
+// MikroTik Routers with IP Accounting enabled
+$routers[]['hostname'] = '';
 
 // SQL Database (Only MySQL has been tested, but SQlite should work fine)
 $db_driver = 'mysql';
-$db_host = '';
+$db_host = 'localhost';
 $db_db = '';
 $db_user = '';
 $db_pass = '';
 $db_prefix = '';
 
-// MikroTik Routers with IP Accounting enabled
-$routers[]['hostname'] = '';
-?>
+// OpenVPN Management Interfaces, for resolving IP address to OpenVPN users (Optional)
+/*$openvpns[] = array(
+	hostname => '',
+	port => 0,
+	password => '',
+);*/
