--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "illuminate/database": "4.0.0",
         "illuminate/cache": "4.0.0",
         "sifnt/sifnt-util": "dev-master",
-        "sifnt/php-openvpn-api": "dev-master"
+        "sifnt/php-openvpn-api": "dev-master",
+        "pear2/Net_RouterOS": "dev-master"
     },
     "autoload": {
         "classmap": [
